# dual-adaptation

./: .gitignore  README.md  Snakefile  config.yml  environment.yml  simulation-config-4.toml  simulation-config.toml  switch-config.sh
code/: .dir-locals.el  CMakeLists.txt  abc.py  dap.py  dual_adaptation_process.h  dynamic_dap.h  logistic_dap.h  main_dap_mpi.cpp  main_holiday_mpi.cpp  main_statics_mpi.cpp  plots.py  simtools.py  static_dap.h  test.py
data/raw_internal/: default-down-3.csv  default-down-4.csv  gradual-up-3.csv  gradual-up-4.csv
notebooks/: bdp.ipynb  example.ipynb  scratch.ipynb
